--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,9 @@
 group=com.github.gregwhitaker
 version=0.1.0
+
+# Dependency Versions
+log4j2Version=2.11.2
+netifiBomVersion=1.6.9
+protobufVersion=3.6.1
+rsocketVersion=0.12.2-RC4
+rsocketRpcVersion=0.2.18
