--- a/letter-service-idl/build.gradle
+++ b/letter-service-idl/build.gradle
@@ -2,15 +2,12 @@ plugins {
     id 'java'
 }
 
-group 'com.github.gregwhitaker'
-version '0.1.0'
+sourceSets {
+    main {
+        resources { srcDir 'src/main/proto' }
+    }
 
-sourceCompatibility = 1.8
-
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    test {
+        resources { srcDir 'src/test/proto' }
+    }
 }
