--- a/letter2-service/build.gradle
+++ b/letter2-service/build.gradle
@@ -1,15 +1,37 @@
 plugins {
     id 'java'
+    id 'application'
+    id 'com.google.protobuf'
 }
-
-version 'unspecified'
 
 sourceCompatibility = 1.8
-
-repositories {
-    mavenCentral()
-}
+mainClassName = 'example.service.letter2.Main'
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    protobuf project(':letter2-service-idl')
+
+    implementation "com.netifi:netifi-broker-client"
+    implementation "com.google.protobuf:protobuf-java"
+
+    implementation "org.apache.logging.log4j:log4j-api"
+    implementation "org.apache.logging.log4j:log4j-core"
+    implementation "org.apache.logging.log4j:log4j-slf4j18-impl"
+}
+
+protobuf {
+    protoc {
+        artifact = 'com.google.protobuf:protoc'
+    }
+    plugins {
+        rsocketRpc {
+            artifact = 'io.rsocket.rpc:rsocket-rpc-protobuf'
+        }
+    }
+    generateProtoTasks {
+        all().each { task ->
+            task.plugins {
+                rsocketRpc {}
+            }
+        }
+    }
 }
