--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id "com.gradle.build-scan" version "3.0"
     id "io.spring.dependency-management" version "1.0.7.RELEASE" apply false
-    id 'com.google.protobuf' version '0.8.10' apply false
+    id "com.google.protobuf" version "0.8.10" apply false
 }
 
 buildScan {
