--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id "com.gradle.build-scan" version "3.0"
+    id "com.github.hierynomus.license" version "0.14.0"
+    id "net.saliman.properties" version "1.4.6"
     id "io.spring.dependency-management" version "1.0.7.RELEASE" apply false
     id "com.google.protobuf" version "0.8.10" apply false
 }
@@ -12,10 +14,18 @@ buildScan {
 
 allprojects {
     apply plugin: 'idea'
+    apply plugin: 'com.github.hierynomus.license'
+    apply plugin: 'net.saliman.properties'
 
     repositories {
         mavenCentral()
         jcenter()
+    }
+
+    license {
+        header rootProject.file('codequality/LICENSE_HEADER')
+        strictCheck true
+        excludes([ "**/*.json", "**/*.html", "**/*.js", "**/*.css",  "**/*.map" ])
     }
 }
 
